[tool.poetry]
name = "numerical-robotics"
version = "0.0.1"
description = "A numerical analysis library made to encapsulate common and tedious robotics functions"
authors = ["Landon Clark <landonclark97@gmail.com>"]
readme = "README.md"
packages = [{include = "numbotics"}]

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.26.3"
scipy = "^1.11.4"
cvxpy = "^1.4.1"
mosek = "^10.1.21"
pybullet = "^3.2.6"
pyyaml = "^6.0.1"
